[package]
name = "async-programming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable"] }

[[bin]]
name = "async-block"
path = "async-block/main.rs"

[[bin]]
name = "async-block1"
path = "async-block1/main.rs"
