[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"

[[bin]]
name = "rayon-tt"
path = "rayon-tt/main.rs"

[[bin]]
name = "channel-test"
path = "channel/main.rs"
