[package]
name = "error-handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "result"
path = "result/main.rs"

[[bin]]
name = "propagate"
path = "propagate/main.rs"

[[bin]]
name = "customerr"
path = "custom-error/main.rs"
