[package]
name = "iterators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "fib"
path = "fib/main.rs"

[[bin]]
name = "iter-adapater"
path = "iterator-adapter/main.rs"


[[bin]]
name = "iter-consumer"
path = "iterator-consume/main.rs"


[[bin]]
name = "impl-iterator"
path = "impl-iterator/main.rs"
