[package]
name = "reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "assignrefer"
path = "assignrefer/main.rs"

[[bin]]
name = "ltp"
path = "lifetime/main.rs"

[[bin]]
name = "ltp2"
path = "lifetime2/main.rs"
